--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -1953,3 +1953,6 @@
  
  XSM_QIN:0 "Цинхай"
  XSM_QIN_DEF:0 "Провинция Цинхай"
+ 
+ ICE_DEN_autonomy_tgwr_real_union_DEF:0 "Королевство Исландия"
+ ICE_DEN_autonomy_tgwr_personal_union_DEF:0 "Королевство Исландия"
