--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -186,7 +186,7 @@
  SWI:0 "Швейцария"
  SWI_DEF:0 "Швейцария"
  SWI_ADJ:0 "Швейцарск"
- TUR:0 "Османская Империя"
+ TUR:0 "Возвышенное Османское Государство"
  TUR_DEF:0 "Возвышенное Османское Государство"
  TUR_ADJ:0 "Османск"
  TUR_communism:0 "Османское Социалистическое Государство"
@@ -531,7 +531,7 @@
  PER_fascism_DEF:0 "Персидская Империя"
  PER_democratic:0 "Республика Персия"
  PER_democratic_DEF:0 "Республика Персия"
- PER_neutrality_DEF:0 "Возвышенное Государство Персия"
+ PER_neutrality_DEF:0 "Охраняемые Владения Персии"
  PER_communism:0 "Персидская Социалистическая Республика"
  PER_communism_DEF:0 "Персидская Социалистическая Республика"
  PER:0 "Персия"
@@ -881,18 +881,13 @@
  SER:0 "Сербия"
  SER_DEF:0 "Сербия"
  SER_ADJ:0 "Сербск"
- ICE_fascism:0 "Исландская Держава"
- ICE_fascism_DEF:0 "Исландская Держава"
- ICE_fascism_ADJ:0 "Исландск"
  ICE_communism:0 "Социалистическая Исландия"
- ICE_communism_DEF:0 "Социалистическая Исландия"
- ICE_communism_ADJ:0 "Исландск"
+ ICE_communism_DEF:0 "Рабочая Республика Исландия"
  ICE_neutrality:0 "Королевство Исландия"
  ICE_neutrality_DEF:0 "Королевство Исландия"
- ICE_neutrality_ADJ:0 "Исландск"
- ICE_democratic:0 "Исландия"
- ICE_democratic_DEF:0 "Исландия"
- ICE_democratic_adj:0 "Исландск"
+ ICE:0 "Исландия"
+ ICE_DEF:0 "Исландия"
+ ICE_ADJ:0 "Исландск"
  SYR_neutrality:0 "Арабское Королевство Сирия"
  SYR_neutrality_DEF:0 "Арабское Королевство Сирия"
  SYR_fascism:0 "Сирийское Национальное Государство"
