--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1576,7 +1576,7 @@
  SER_alexander_regency:0 "Регентство Александра"
  SER_george_regency:0 "Регенство Джорджа"
  SER_helen_regency:0 "Регенство Елены"
- SER_the_regency_question_output:0 "Фокус §Y«Вопрос о регентстве»§! должен быть выполнен. Он выберет §YРегента§! для [SER.getFlag]§YСербии§!. Вот возможные результаты :"
+ SER_the_regency_question_output:0 "Фокус §YВопрос о регентстве§! должен быть выполнен. Он выберет §Yрегента§! для [SER.getFlag]§YСербии§!. Вот возможные результаты :"
  SER_regency_supported:0 "Регентство поддерживается"
  SER_obstruction_crisis:0 "Непроходимый кризис"
  SER_fighting_black_hand:0 "Борьба с Черной Рукой"
@@ -9319,3 +9319,5 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  FRA_salary_limitation_act:0 "Закон об ограничении зарплаты"
  FRA_salary_limitation_act_desc:0 "Закон, предложенный §YМорисом Торезом§!, определяет формулу расчета, ограничивающую максимальную зарплату в компании на основе ее прибыли, количества сотрудников и самой низкой зарплаты. В самом простом виде она ограничивает максимальную зарплату 25-кратным размером самой низкой зарплаты в компании."
+ 
+ DEN_ICE_act_of_union:0 "@DEN @ICE Датско-исландский акт об унии"
