cemals secret deal to join the entente

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1935,6 +1935,9 @@
  TUR_ottoman_diyarbakir:0 "Ottoman Diyarbekir"
  TUR_ottoman_diyarbakir_DEF:0 "Ottoman Vilayet of Diyarbekir"
  TUR_ottoman_diyarbakir_ADJ:0 "Ottoman"
+ TUR_ottoman_cemal:0 "Ottoman Reclamation Government"
+ TUR_ottoman_cemal_DEF:0 "Ottoman Reclamation Government Under the Command of Ahmed Cemâl Paşa"
+ TUR_ottoman_cemal_ADJ:0 "Ottoman"
  
  SER_AUH_neutrality:0 "Serbia"
  SER_AUH_fascism:0 "Serbia"
