leaf stop being racist

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5747,13 +5747,26 @@ ROM_LITTLE_ENTENTE_FACTION_NAME:0 "Little Entente"
 ROM_alexandru_vaida_voevod:0 "Alexandru Vaida Voevod"
 ww1_romania.85.t:0 "Election Results of Greater Romania"
 ww1_romania.85.d:0 "Blah write it lol"
-ww1_romania.85.a:0 "TND victory"
+ww1_romania.85.a:0 " "
 ww1_romania.85.b:0 "1488 victory"
- ww1_romania.86.t:0 "King Ferdinand Dissolves the Government"
- ww1_romania.86.d:0 "Blah he saw the guys land reform as too radical"
- ww1_romania.86.a:0 "how dare that nigger!"
+ww1_romania.86.t:0 "King Ferdinand Dissolves the Government"
+ww1_romania.86.d:0 "Blah he saw the guys land reform as too radical"
+ww1_romania.86.a:0 "How dare he?"
 ROM_grand_coalition_idea:0 "Grand Coalition"
 ROM_rise_of_socialism:0 "Rise of Socialism"
+ROM_victory_of_the_peasants:0 "Victory of the Peasants"
+ROM_the_man_to_end_the_chaos:0 "The Man to End the Chaos"
+ROM_alliance_with_the_pnl:0 "Alliance with the PNL"
+ROM_alliance_with_the_anti_socialists:0 "Alliance With the Anti-Socialists"
+ROM_shut_down_socialist_conference:0 "Shut Down Socialist Conference"
+ROM_bury_the_grudges_of_the_past:0 "Bury the Grudges of the Past"
+ROM_court_the_stereianists:0 "Court the Stereianists"
+ROM_true_meaningful_land_reform:0 "A True and Meaningful Land Reform"
+ROM_hold_new_elections:0 "Hold New Elections"
+ROM_alliance_with_the_pcd2:0 "Alliance with the PCD"
+
+
+
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
