--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -12622,6 +12622,9 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  canada.74.d:0 "После бурных событий и революции в Великобритании королевская семья, спасая свои жизни, выехала за границу. Никто не ожидал этих ветров и волн, но и не осмеливался сказать, что через несколько лет монархия вновь приземлится на родных островах.\nКак бы то ни было, Британская империя возродилась, и "Юнион Джек" вновь гордо поднялся в Лондоне. [ENG.GetLeader] вернулся на родину с великолепным парадом верных гвардейцев и всенародным приветствием." 
  canada.74.a:0 "Да здравствует Империя! \n(Играть за [Eng.GetName])" 
  canada.74.b:0 "Да здравствует Империя!" 
+ kis_news.150.t: "The Death of Louis Cyr"
+ kis_news.150.d: "Louis Cyr, or Cyprien-Noé Cyr, passed away at the age of 49, succumbing to chronic nephritis. His death marks the end of an era for the world of strongmen. Born in 1863, Cyr became a household name not only in Canada but across the world for his extraordinary feats of strength. His legendary back lift of 4,337 pounds has yet to be matched, and many believe it may never be surpassed. Crowds from Montreal to Europe marveled at his displays of human power, which included lifting horses, resisting the pull of teams of horses, and hoisting enormous weights above his head. Though his health had been declining in recent years, Cyr's reputation remained untarnished. In an age where physical prowess was admired, he stood as a living embodiment of human potential. His passing is mourned by many, but his legacy will endure as tales of his strength will surely continue to be told for generations."
+ kis_news.150.a: "Rest in Peace."
  
  #KOREA 
  ww1_korea.1.t:0 "Корея провозглашает независимость"
