initial tech loc

--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -12,13 +12,13 @@
  machine_tools5:0 "Machine Tools V"
  machine_tools5_desc:0 "With new advanced machinery, we can increase our military production more then ever before."
  industrial_complex1:0 "Industrial Complex Construction I"
- industrial_complex1_desc:0 "" 
+ industrial_complex1_desc:0 "Industry functions much better when centralized around key locations, we have discovered. This should be how we build new factories from now on." 
  industrial_complex2:0 "Industrial Complex Construction II"
- industrial_complex2_desc:0 ""
+ industrial_complex2_desc:0 "The eruption of war necesitates increased factory output, which means larger and more factories."
  industrial_complex3:0 "Industrial Complex Construction III"
- industrial_complex3_desc:0 ""
+ industrial_complex3_desc:0 "Labor conditions? Bah! More machinery, tighter spaces, and extra buildings! Let our industrial capacity grow evermore!"
  industrial_complex4:0 "Industrial Complex Construction IV"
- industrial_complex4_desc:0 ""
+ industrial_complex4_desc:0 "More! More! The demands of our country's population and military increase ever further, as should the centralization of our industry."
  fortification_tech:0 "Fortification Technologies"
  fortification1:0 "Fortification I"
  fortification1_desc:0 "By building basic defensive positions, we can easily increase our defensive capabilities."
