--- a/localisation/russian/replace/replace_research_l_russian.yml
+++ b/localisation/russian/replace/replace_research_l_russian.yml
@@ -473,8 +473,8 @@
  UNLOCK_TRAINS:0 "Разблокирует возможность исследования §YГражданского поезда§!."
  electric_railway:0 "Электрическая железная дорога"
  electric_railway_desc:0 "Электрификация железных дорог - это использование электроэнергии для приведения в движение железнодорожного транспорта. Электричество обычно вырабатывается на крупных и относительно эффективных генерирующих станциях, передается в железнодорожную сеть и распределяется по поездам."
- haber_process:0 "Haber Process"
- haber_process_desc:0 "The Haber process is the main industrial procedure for the production of ammonia." 
+ haber_process:0 "Процесс Габера"
+ haber_process_desc:0 "Процесс Габера - это основная промышленная технология производства аммиака." 
  advanced_oil_plant:0 "Усовершенствованная нефтепереработка"
  advanced_oil_plant_desc:0 "Новые экспериментальные методы очистки, например гидроочистка, используемые на нефтезаводах, резко повышают качество готового продукта."
  construction1:0 "Строительство I"
