--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -9211,9 +9211,9 @@
  POL_planned_economy:0 "Плановая экономика"
  POL_planned_economy_desc:0 ""
  POL_claim_lithuania:0 "Претензии на Литву"
- POL_claim_lithuania_desc:0 "Чтобы восстановить старое содружество и его славу, первоочередной задачей является захват Литвы."
+ POL_claim_lithuania_desc:0 "Чтобы восстановить старую Речь Посполитую и ее славу, первоочередной задачей является захват Литвы."
  POL_kiev_offensive:0 "Наступление на Киев"
- POL_kiev_offensive_desc:0 "Нельзя останавливаться на возвращении Восточной Галиции. Украинские территории, расположенные на западной стороне Днепра, принадлежат к законным землям старого содружества."
+ POL_kiev_offensive_desc:0 "Нельзя останавливаться на возвращении Восточной Галиции. Украинские территории, расположенные на западной стороне Днепра, принадлежат к законным землям старой Речи Посполитой."
  POL_minsk_offensive:0 "Наступление на Минск"
  POL_minsk_offensive_desc:0 "Русины должны будут присоединиться к нам, а не к России. Это месть за разделы Польши."
  POL_lithuanian_territories:0 "Литовские территории"
@@ -9221,7 +9221,7 @@
  POL_eastern_territories:0 "Восточные территории"
  POL_eastern_territories_desc:0 ""
  POL_eastern_territories_tt:0 "§YНациональные территории будут применяться только к тем территориям, которыми вы владеете в данный момент. Если вы завершили оба фокуса «Наступление на Минск» и «Наступление на Киев», вы сможете получить максимум национальных территорий.§!"
- POL_the_old_commonwealth:0 "Старое Содружество"
+ POL_the_old_commonwealth:0 "Старая Речь Посполитая"
  POL_the_old_commonwealth_desc:0 "«Si Deus nobiscum quis contra nos»"
  POL_war_with_russia:0 "Война с Россией"
  POL_war_with_russia_desc:0 "Сейчас или никогда! Мы вернем себе былую славу благодаря этому!"
