--- a/localisation/russian/ww1_research_l_russian.yml
+++ b/localisation/russian/ww1_research_l_russian.yml
@@ -11,14 +11,14 @@
  machine_tools4_desc:0 "Используя больше конвейеров в наших производственных линиях, мы можем повысить эффективность и производить больше оборудования."
  machine_tools5:0 "Станки V"
  machine_tools5_desc:0 "Благодаря новому передовому оборудованию мы сможем увеличить военное производство как никогда раньше."
- industrial_complex1:0 "Рассредоточенная промышленность I"
- industrial_complex1_desc:0 "" 
- industrial_complex2:0 "Рассредоточенная промышленность II"
- industrial_complex2_desc:0 ""
- industrial_complex3:0 "Рассредоточенная промышленность III"
- industrial_complex3_desc:0 ""
- industrial_complex4:0 "Рассредоточенная промышленность IV"
- industrial_complex4_desc:0 ""
+ industrial_complex1:0 "Строительство промышленных комплексов I"
+ industrial_complex1_desc:0 "Как мы выяснили, промышленность функционирует гораздо лучше, когда она сосредоточена в ключевых точках. Именно так мы теперь будем строить новые фабрики." 
+ industrial_complex2:0 "Строительство промышленных комплексов II"
+ industrial_complex2_desc:0 "Разразившаяся война требует увеличения объемов производства, а это значит, что фабрик становится все больше и больше."
+ industrial_complex3:0 "Строительство промышленных комплексов III"
+ industrial_complex3_desc:0 "Условия труда? Ха! Больше машин, тесных помещений и дополнительных зданий! Пусть наша промышленная мощь растет все больше и больше!"
+ industrial_complex4:0 "Строительство промышленных комплексов IV"
+ industrial_complex4_desc:0 "Больше! Больше! Потребности населения и армии нашей страны растут все сильнее, как и централизация промышленности."
  fortification_tech:0 "Технологии фортификации"
  fortification1:0 "Фортификация I"
  fortification1_desc:0 "Выстроив базовые оборонительные позиции, мы сможем легко повысить свой защитный потенциал."
