--- a/localisation/english/replace/replace_characters_l_english.yml
+++ b/localisation/english/replace/replace_characters_l_english.yml
@@ -13,4 +13,5 @@
  TUR_fahrettin_altay:0 "Fahrettin Paşa"
  TUR_mehmet_emin_yurdakul:0 "Mehmet Emin Bey"
  ICE_christian_x:0 "Kristján 10."
+ GER_adolf_friedrich_von_mecklenburg:0 "Adolf Friedrich zu Mecklenburg"
  
