--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1043,10 +1043,12 @@
  STATE_1042: "Maakhir"
  STATE_1043: "Šariš"
  STATE_1044: "Eastern Partium"
+ STATE_1045: "Chientao" #間島
+ STATE_1046: "Kanchow" #贛州
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
- SEOGANDO_STATE: "Seogando"
+ NAMMANJU_STATE: "Nammanju"
  BUKGANDO_STATE: "Bukgando"
  TSARGRAD_STATE: "Tsargrad"
  QIRIM_STATE: "Qirim"
