--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1911,7 +1911,8 @@
  VICTORY_POINTS_3407: "Khotyn"
  VICTORY_POINTS_6600: "Bălti"
  VICTORY_POINTS_13203: "Juneau"
-
+ VICTORY_POINTS_944: "Yenki" #延吉
+ VICTORY_POINTS_1104: "Yantai" #延吉
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
@@ -2043,3 +2044,4 @@
  GLIWICE_PROV: "Gliwice"
  OPOLE_PROV: "Opole"
  BYDGOSZCZ_PROV: "Bydgoszcz"
+ YEONGIL_PROV: "Yeongil"
