--- a/localisation/english/ww1_modifiers_l_english.yml
+++ b/localisation/english/ww1_modifiers_l_english.yml
@@ -90,4 +90,6 @@
  xinjiang_modifier:0 "Sinkiang Uyghurs"
  kumul_modifier:0 "Kumul Khanate"
  kumul_abolished:0 "Kumul Khanate has been abolished"
+ manchu_modifier:0 "Manchus"
+ gando_modifier:0 "Koreans"
  concessions_modifier:0 "Concessions In China"
