annexation of finland law

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -70,6 +70,8 @@
  RUS_law_of_equality_passed_in_sc: "Law of Equality of Russians in Finland was passed in the State Council"
  RUS_law_on_annexation_of_terijoki_sd: "Law on Annexation of Terijoki"
  RUS_law_on_annexation_of_terijoki_sc: "Law on Annexation of Terijoki"
+ RUS_law_on_abolition_of_finnish_autonomy_sd: "Law on Abolition of the Grand Duchy of Finland"
+ RUS_law_on_abolition_of_finnish_autonomy_sc: "Law on Abolition of the Grand Duchy of Finland"
  RUS_law_on_peasant_land_ownership_sc: "Law on Peasant Land Ownership"
  RUS_law_on_peasant_land_ownership_sd: "Law on Peasant Land Ownership"
  RUS_law_on_land_management_sc: "Law on Land Management"
@@ -509,6 +511,11 @@
  ww1_russian_empire.34.a: "Horrible!"
  ww1_russian_empire.35.t: "Guchkov Joins the Opposition!"
  ww1_russian_empire.35.a: "What is the matter with this man?!"
+ ww1_russian_empire.36.t: "Russia abolished the Grand Duchy of Finland"
+ ww1_russian_empire.36.d: "..."
+ ww1_russian_empire.36.a: "Sweden will be the heart of our independence movement"
+ ww1_russian_empire.36.b: "Norway will help us fight Russian oppression"
+ ww1_russian_empire.36.c: "We accept our fate..."
 
  #FOREIGN POLICY EVENTS
  ww1_russian_empire.30.t: "Persia rejects the ultimatum"
@@ -564,11 +571,9 @@
  opposition: "§O[GetSeatsForRus]§!"
  obstruction: "§R[GetSeatsForRus]§!"
 
- RUS_far_right_law_tt: "\nThis is a £RUS_parliament_party_icon|4 $party_4_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_center_right_law_tt: "\nThis is a £RUS_parliament_party_icon|3 $party_3_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_centrist_law_tt: "\nThis is a §3Centrist§! law, meaning it favours reformist elements from both £RUS_parliament_party_icon|2 $party_2_text_rus$ and £RUS_parliament_party_icon|3 $party_3_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_center_left_law_tt: "\nThis is a £RUS_parliament_party_icon|2 $party_2_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
- RUS_socialist_law_tt: "\nThis is a £RUS_parliament_party_icon|1 $party_1_text_rus$ law. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_leftist_law_tt: "\nThis is a §CLeftist§! law, meaning it favours reformist elements from both £RUS_parliament_party_icon|1 $party_1_text_rus$ and £RUS_parliament_party_icon|2 $party_2_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_centrist_law_tt: "\nThis is a §3Centrist§! law, meaning it favours centrist elements from both £RUS_parliament_party_icon|2 $party_2_text_rus$ and £RUS_parliament_party_icon|3 $party_3_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
+ RUS_rightist_law_tt: "\nThis is a §gRightist§! law, meaning it favours conservative elements from both £RUS_parliament_party_icon|3 $party_3_text_rus$ and £RUS_parliament_party_icon|4 $party_4_text_rus$. With the current dominant faction the expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
 
  RUS_add_law_acceptance_tt: "Changes §YLaw Acceptance§! by §G[?RUS_add_law_acceptance_var|+1%%]§!"
  base_law_acceptance_tt: "The expected base §YLaw Acceptance§! is [base_law_acceptance_scripted_trigger]\n"
