--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1960,3 +1960,10 @@
 
  ICE_DEN_autonomy_tgwr_real_union_DEF:0 "the Kingdom of Iceland"
  ICE_DEN_autonomy_tgwr_personal_union_DEF:0 "the Kingdom of Iceland"
+
+ KOR_CHI_autonomy_tgwr_regional_government:0 "Korean Autonomous Region"
+ KOR_CHI_autonomy_tgwr_regional_government_DEF:0 "the Korean Autonomous Region In China"
+ KOR_QIN_autonomy_tgwr_regional_government:0 "Korean Autonomous Region"
+ KOR_QIN_autonomy_tgwr_regional_government_DEF:0 "the Korean Autonomous Region In China"
+ KOR_FNG_autonomy_tgwr_regional_government:0 "Korean Autonomous Region"
+ KOR_FNG_autonomy_tgwr_regional_government_DEF:0 "the Korean Autonomous Region In China"
