--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1279,9 +1279,8 @@
  
  KOR_fascism_party:0 "KIAF"
  KOR_fascism_party_long:0 "Daehanjegukgun"
- KOR_communism_party:0 "Dongnip Hyeophoe\n§R(Disbanded)§!"
- KOR_democratic_party:0 "Dongnip Hyeophoe\n§R(Disbanded)§!"
- KOR_independence_club:0 "Dongnip Hyeophoe"
+ KOR_communism_party:0 "Sinminhoe"
+ KOR_democratic_party:0 "Sinminhoe"
  KOR_socialist_party:0 "KSP"
  KOR_socialist_party_long:0 "Hanin Sahoedang"
  KOR_neutrality_party:0 "Yi Wangga"
