Restoration of Finnish Autonomy law

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -72,6 +72,8 @@
  RUS_law_on_annexation_of_terijoki_sc: "Law on Annexation of Terijoki"
  RUS_law_on_abolition_of_finnish_autonomy_sd: "Law on Abolition of the Grand Duchy of Finland"
  RUS_law_on_abolition_of_finnish_autonomy_sc: "Law on Abolition of the Grand Duchy of Finland"
+ RUS_law_on_restoration_of_finnish_autonomy_sd: "Law of Full Autonomy For Finland"
+ RUS_law_on_restoration_of_finnish_autonomy_sc: "Law of Full Autonomy For Finland"
  RUS_law_on_peasant_land_ownership_sc: "Law on Peasant Land Ownership"
  RUS_law_on_peasant_land_ownership_sd: "Law on Peasant Land Ownership"
  RUS_law_on_land_management_sc: "Law on Land Management"
