--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -1470,7 +1470,7 @@
  AST_australasia_DEF:0 "Австралазийская Конфедерация"
  AST_australasia_ADJ:0 "Австралазийск"
  AST_australasia_communism:0 "Красная Австралазия"
- AST_australasia_communism_DEF:0 "Австралазийский союз"
+ AST_australasia_communism_DEF:0 "Австралазийский Союз"
  AST_australasia_communism_ADJ:0 "Австралазийск"
  HAN_niederdeutschland:0 "Нижняя Германия"
  HAN_niederdeutschland_DEF:0 "Нижняя Германия"
