--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -1043,10 +1043,12 @@
  STATE_1042: "Маахир"
  STATE_1043: "Шариш"
  STATE_1044: "Восточный Парциум"
+ STATE_1045: "Цзяньдао" #間島
+ STATE_1046: "Ганьчжоу" #贛州
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
- SEOGANDO_STATE: "Seogando"
+ NAMMANJU_STATE: "Nammanju"
  BUKGANDO_STATE: "Bukgando"
  TSARGRAD_STATE: "Tsargrad"
  QIRIM_STATE: "Qirim"
