--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -1911,7 +1911,8 @@
  VICTORY_POINTS_3407: "Хотин"
  VICTORY_POINTS_6600: "Бельцы"
  VICTORY_POINTS_13203: "Джуно"
-
+ VICTORY_POINTS_944: "Яньцзи" #延吉
+ VICTORY_POINTS_1104: "Яньтай" #延吉
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
@@ -2043,3 +2044,4 @@
  GLIWICE_PROV: "Gliwice"
  OPOLE_PROV: "Opole"
  BYDGOSZCZ_PROV: "Bydgoszcz"
+ YEONGIL_PROV: "Yeongil"
