--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1473,7 +1473,7 @@
  SER_visit_ohrid:0 "Посетить Охрид"
  SER_visit_novi_sad:0 "Посетить Нови-Сад"
  SER_visit_city:0 "Посетить [FROM.GetCapitalVictoryPointName]"
- SER_on_tour:0 "Посещает [SER.getFlag]§YSerbia§!"
+ SER_on_tour:0 "Посещает [SER.getFlag]§YСербию§!"
  SER_remove_military_governor_in_state:0 "Убрать военных губернаторов в [FROM.GetName]"
  SER_clean_region_from_black_hand_influence:0 "Очистить влияние Черной руки в [FROM.getName]"
  SER_GRE_invitation:0 "Приглашение к оборонному пакту"
@@ -1886,6 +1886,7 @@
  CHI_ZHE_attack_FNG:0 "Взять Нанкин"
  CHI_ZHE_attack_FNG_desc:0 "Гегемония Чжили рухнула, и Фэнтянь стал угрозой. Единственный выход - взять Нанкин и претендовать на собственную сферу на юге."
  CHI_sell_some_railroad_bruh:0 "Продать железнодорожную концессию в [FROM.GetName]"
+
 
  TUR_OPDA_CURRENCY_TOOLTIP:0 "§o                             Курсы обмена                       §!\n§d-----------------------------------------------------------------§!\n§Y3%§! §vФабрики ТНП =§! §Y0.295 тыс. Лир§!\n§d----------------------------------------------------------------§!"
  TUR_economy_decision:0 "Состояние экономики"
@@ -9321,3 +9322,4 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FRA_salary_limitation_act_desc:0 "Закон, предложенный §YМорисом Торезом§!, определяет формулу расчета, ограничивающую максимальную зарплату в компании на основе ее прибыли, количества сотрудников и самой низкой зарплаты. В самом простом виде она ограничивает максимальную зарплату 25-кратным размером самой низкой зарплаты в компании."
  
  DEN_ICE_act_of_union:0 "@DEN @ICE Датско-исландский акт об унии"
+ 
