--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -2366,6 +2366,7 @@
  soviet_advisors:0 "Soviet Advisors"
  CHI_socialist_bureaucracy:0 "Socialist Bureaucracy"
  CHI_union_in_power:0 "United Unions of Chinese Workers"
+ CHI_idea_long_march:0 "Long March"
  
  #USA
  USA_idea_volunteer_corps:0 "Добровольческий корпус"
