--- a/localisation/russian/ww1_research_l_russian.yml
+++ b/localisation/russian/ww1_research_l_russian.yml
@@ -27,9 +27,9 @@
  fortification3:0 "Фортификация III"
  fortification3_desc:0 "Благодаря металлическим конструкциям, установленным перед нашими оборонительными позициями, врагу будет трудно продвигаться к нашим укрепленным позициям, которые мы сможем легко защитить."
  anti_air_building1:0 "ПВО I"
- anti_air_building1_desc:0 "" 
+ anti_air_building1_desc:0 "Большие скорострельные установки, способные вести автоматический огонь на больших расстояниях, надеюсь, защитят нас от воздушной угрозы." 
  anti_air_building2:0 "ПВО II"
- anti_air_building2_desc:0 ""
+ anti_air_building2_desc:0 "По мере того как небо затягивается вражескими самолетами, мы, в свою очередь, должны повышать обороноспособность против этих бомбардировщиков."
  oil_production1:0 "Нефтедобыча I"
  oil_production1_desc:0 "С развитием технологий бурения нефтяных скважин мы можем добывать больше нефти, чем раньше."
  oil_production2:0 "Нефтедобыча II"
@@ -104,13 +104,13 @@
  advanced_radio:0 "Передовое радио"
  advanced_radio_desc:0 "Дальнейшее развитие радио заключается не только в увеличении мощности сигнала, появлении дуплексной связи, но и в уменьшении габаритов станций, что сделало их более мобильными."
  analytical_engine:0 "Аналитическая машина"
- analytical_engine_desc:0 "Аналитическая машина" 
+ analytical_engine_desc:0 "Изобретенный в 1837 году аналитический двигатель считался первым «полным по Тьюрингу» компьютером, то есть он имел ту же структуру, что и компьютеры, которые были созданы с момента его изобретения." 
  electromechanical_adding_machine:0 "Электромеханическая суммирующая машина"
- electromechanical_adding_machine_desc:0 "Электромеханическая суммирующая машина"
+ electromechanical_adding_machine_desc:0 "Это небольшое устройство оказывается очень полезным во многих областях, например, при артиллерийских расчетах и в университетах. Математика становится проще с каждым днем."
  differential_analyzer:0 "Дифференциальный анализатор"
  differential_analyzer_desc:0 "Дифференциальный анализатор можно считать первым аналоговым компьютером."
- basic_electronic_engineering:0 "Основы электронной техники"
- basic_electronic_engineering_desc:0 "Основы электронной техники." 
+ basic_electronic_engineering:0 "Базовая электронная техника"
+ basic_electronic_engineering_desc:0 "Мы живем в век, когда электрические машины могут уже не только согревать и освещать нас, но и помогать нам думать и общаться. Электроника будет играть ключевую роль в военной разведке в следующем столетии." 
  basic_cryptography:0 "Базовая криптография"
  basic_cryptography_desc:0 "Базовая криптография" 
  advanced_cryptography:0 "Передовая криптография"
