--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -945,16 +945,16 @@
  ROM_legionary_party:0 "Движение Легионеров"
  ROM_legionary_party_long:0 "Легион Архангела Михаила"
  
- MOL_democratic_party:0 "Национальный Совет"
+ MOL_democratic_party:0 "Сфатул Цэрий"
  MOL_communism_party:0 "Большевики"
- MOL_neutrality_party:0 "Конгресс Остаса"
- MOL_neutrality_party_long:0 "Конгресс Молдавских Остготов"
+ MOL_neutrality_party:0 "Конгресс Солдат"
+ MOL_neutrality_party_long:0 "Конгресс Молдавских Солдат"
 
  SER_republican_party_long:0 "Республиканская Партия"
  SER_republican_party:0 "Республиканцы"
  SER_independent_radical_party_long:0 "Самостоятельная Радикальная Партия"
  SER_independent_radical_party:0 "Самостоятельники"
- SER_communism_party:0 "Социал-демократы"
+ SER_communism_party:0 "Социал-Демократы"
  SER_communism_party_long:0 "Социал-Демократическая Партия"
  SER_democratic_party:0 "Радикалы"
  SER_democratic_party_long:0 "Народная Радикальная Партия"
