south african states

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1913,6 +1913,7 @@
  VICTORY_POINTS_13203: "Juneau"
  VICTORY_POINTS_944: "Yenki" #延吉
  VICTORY_POINTS_1104: "Yantai" #延吉
+ VICTORY_POINTS_4556: "Maseru"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
