--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1045,6 +1045,9 @@
  STATE_1044: "Eastern Partium"
  STATE_1045: "Chientao" #間島
  STATE_1046: "Kanchow" #贛州
+ STATE_1047: "Basutoland"
+ STATE_1048: "Swaziland"
+ STATE_1049: "Orange River Colony"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
