--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1047,7 +1047,7 @@
  STATE_1046: "Kanchow" #贛州
  STATE_1047: "Basutoland"
  STATE_1048: "Swaziland"
- STATE_1049: "Orange River Colony"
+ STATE_1049: "Orange Free State"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
