--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1048,6 +1048,7 @@
  STATE_1047: "Basutoland"
  STATE_1048: "Swaziland"
  STATE_1049: "Orange Free State"
+ STATE_1050: "Skeleton Coast"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
