South African flag and leader events and overal improvements

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -558,6 +558,8 @@
  SAF_fascism_DEF:0 "the Boer Republic"
  SAF_neutrality:0 "Unitary South Africa"
  SAF_neutrality_DEF:0 "Unitary South Africa"
+ SAF_democratic:0 "Union of South Africa"
+ SAF_democratic_DEF:0 "the Union of South Africa"
  SAF_communism:0 "Cape Commune"
  SAF_communism_DEF:0 "the Cape Commune"
  SAF_fascism_ADJ:0 "Boer"
