--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -999,9 +999,11 @@
  SAF_communism_party:0 "ISL"
  SAF_communism_party_long:0 "International Socialist League"
  SAF_democratic_party:0 "SAP"
- SAF_democratic_party_long:0 "South African Party"
+ SAF_democratic_party_long:0 "South African Party/Suid-Afrikaanse Party"
  SAF_fascism_party:0 "Bittereinders"
  SAF_fascism_party_long:0 "Boer Bittereinders"
+ SAF_national_party:0 "NP"
+ SAF_national_party_long:0 "National Party/Nasionale Party"
  
  NZL_neutrality_party:0 "Executive Council"
  NZL_democratic_party:0 "Liberal Party"
