--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -454,8 +454,8 @@
  ENG_room_40_desc:0 "Harnessing the power of intelligence and secrecy, Room 40 serves as the nerve center of our cryptographic endeavors. Our commitment to excellence in code-breaking will yield invaluable intelligence, fortifying our national security."
  ENG_Boer_Blues:0 "Boer Blues"
  ENG_Boer_Blues_desc:0 "More than a decade has flowed since the tumultuous days of the Second Boer War, yet its reverberations are still felt, weaving through the fabric of the Empire. It’s time to delve deeper, to unravel the threads of history, and to glean lessons that will fortify our future."
- ENG_free_saf:0 "South African Federation"
- ENG_free_saf_desc:0 "The dream of a South African Federation has been realized after years of perseverance and diplomatic finesse. This monumental achievement paves the way for a new era of stability and prosperity under the protective wing of the Empire."
+ ENG_free_saf:0 "South African Dominion"
+ ENG_free_saf_desc:0 "The dream of a South African Dominion has been realized after years of perseverance and diplomatic finesse. This monumental achievement paves the way for a new era of stability and prosperity under the protective wing of the Empire."
  ENG_africa_regionalism:0 "Regionalism in Africa"
  ENG_africa_regionalism_desc:0 "South Africa stands as a jewel in the crown of our colonial achievements, a beacon of success that should illuminate our path in Africa. Let's strategically apply this successful model across our African territories, fostering stability and prosperity."
  ENG_encourage_africa_colony:0 "Encourage African Settlement"
