romania quick change
loc + focus icons + event

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5764,6 +5764,12 @@ ROM_court_the_stereianists:0 "Court the Stereianists"
 ROM_true_meaningful_land_reform:0 "A True and Meaningful Land Reform"
 ROM_hold_new_elections:0 "Hold New Elections"
 ROM_alliance_with_the_pcd2:0 "Alliance with the PCD"
+ww1_romania.87.t:0 "The [GER.GetAdjective]s repair our Oil Fields!"
+ww1_romania.87.d:0 "The [GER.GetAdjective]s repair our oil fields in Muntenia after we signed the Armistice of Foscani with them to get Romania out of the war. They will also take our oil for 99 years."
+ww1_romania.87.a:0 "Great... wait, what?"
+ROM_dismantle_transylvanian_councils:0 "Dismantle Transylvanian Councils"
+ROM_joint_land_reform_efforts:0 "Joint Land Reform Efforts"
+ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
 
 
 
