--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -498,20 +498,18 @@ l_english:
  ww1_BUL_TUR.60.d: "Geshov's statement has left the Turkish representatives uncertain. Bulgaria is unwilling to commit to long-term territorial agreements regarding Macedonia. This indecision may strain further negotiations."
  ww1_BUL_TUR.60.a: "What Does This Even Mean?"
 
- ww1_BUL_TUR.61.t:0 "Tea Time with W.T. Stead"
- ww1_BUL_TUR.61.d:0 "The well-known British journalist and social reformer, W.T. Stead, has arrived in Sofia for a discussion with our statesman Ivan Geshov. Over a cup of tea, they exchanged views on the political situation in the Balkans and beyond. In particular, the ongoing Italian invasion of Libya caught Stead's attention, as he expressed his concern about the broader implications of this conflict on the Ottoman Empire and the balance of power in the Mediterranean. Geshov, while focused on Bulgaria's own interests, listened closely to Stead's perspective."
- ww1_BUL_TUR.61.a:0 "This sounds promising."
+ ww1_BUL_TUR.61.t: "W.T Stead's Report on the Italian Invasion of Libya"
+ ww1_BUL_TUR.61.d: "The noble english writer and humanitarian, W.T Stead, who is also good friends with Ivan Geshov and an admirer of Tsar Ferdinand has reports from Libya. He is in support of the Ottoman forces and the Young Turk administration, and has called out the Italian's imperial motives us unjust and cruel."
+ ww1_BUL_TUR.61.a: "Interesting"
 
- ww1_BUL_TUR.62.t:0 "W.T. Stead's Doubts about the Young Turk Administration"
- ww1_BUL_TUR.62.d:0 "During his stay, W.T. Stead shared his skepticism about the Young Turk regime, expressing concern over its ability to effectively govern the Ottoman Empire during such turbulent times. He suggested that the administration’s inexperience might accelerate the empire’s decline. Ivan Geshov, while wary of Stead's criticisms, noted the importance of understanding outside perspectives on the Ottoman Empire's future."
- ww1_BUL_TUR.62.a:0 "A concerning development."
+ ww1_BUL_TUR.62.t: "W.T Stead's Doubts on the Young Turk Administration"
+ ww1_BUL_TUR.62.d: "W.T Stead was originally in favor of the Young Turkish administration but as the war in Libya draggs on and the massacres of Christians within the Ottoman Empire continue he has become disillusioned with the new rulers, calling them no better than Sultan Habdullmahid's reign, and urges Ivan Geshov to be cautious when negotiating with Nasim Bey and to be wary of a false sense of security." 
+ ww1_BUL_TUR.62.a: "Concerning News"
 
  ###Ideas Loc###
  #BULGARIA
  bdz:0 "BDZ"
  bdz_desc:0 ""
- sofia_artillery_arsenal:0 "Sofia Artillery Arsenal"
- sofia_artillery_arsenal_desc:0 ""
  BUL_idea_national_assembly:0 "National Assembly"
  BUL_idea_national_assembly_desc:0 "Ever since the establishment of the preliminary Constituent National Assembly and especially after the ratification of the Tarnovo constitution, Bulgaria has had an uninterrupted rule partially by Parliament. Nominally, this system has made Bulgaria one of the most democratic nations in Eastern Europe, however, in practice, the National Assembly is largely incapable of agreement or even performing its basic constitutional functions, only mounting opposition significant opposition against the monarch of the state."
  BUL_idea_national_assembly_2:0 "National Assembly"
@@ -524,12 +522,6 @@ l_english:
  BUL_idea_first_national_catastrophe_2_desc:0 ""
  BUL_idea_second_national_catastrophe:0 "Second National Catastrophe"
  BUL_idea_second_national_catastrophe_desc:0 ""
- BUL_idea_welfare_reforms:0 "Welfare Reforms"
- BUL_idea_welfare_reforms_desc:0 ""
- BUL_idea_refugee_crisis:0 "Refugee Crisis"
- BUL_idea_refugee_crisis_desc:0 ""
- BUL_idea_resettled_refugees:0 "Resettled Refugees"
- BUL_idea_resettled_refugees_desc:0 ""
  BUL_idea_boris_iii:0 "Boris III"
  BUL_idea_boris_iii_desc:0 "Boris Clement Robert Mary Pius Louis Stanislaus Xavier. The eldest son of Ferdinand I, Boris acceded to the throne upon the abdication of his father."
  BUL_idea_balkan_hegemony:0 "Balkan Hegemony"
