--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5675,6 +5675,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_occupy_mount_lebanon_mutasarrifate:0 "Occupy Mount Lebanon Mutasarrifate"
  TUR_occupy_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
  TUR_occupy_mount_lebanon_mutasarrifate_tt:0 "Replace §YAutonomous Mutasarrifate§! with §YAutonomous Vilayet§!\nEffective change:\n£resources_texticon  Resource Gain Efficiency: §G+35.00%§!\n£civ_factory  Local Factories: §G+35%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-3%§!\n£manpower_texticon  Recruitable Population: §G+35.00%§!\n\n"
+ TUR_occupy_mount_lebanon_mutasarrifate_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §R+50%§!\n\n"
+ TUR_occupy_mount_lebanon_mutasarrifate_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-50%§!\n\n"
+ TUR_occupy_mount_lebanon_mutasarrifate_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
+ TUR_occupy_mount_lebanon_mutasarrifate_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-20%§!\n\n"
  TUR_abolish_the_sharifate_of_mecca:0 "Abolish the Sharifate of Mecca"
  TUR_abolish_the_sharifate_of_mecca_desc:0 "After our reconquest of Hejaz from Muhammad Ali's Egypt, the reorganization of the administration of the region resulted in two parallel administrations: Vilayet of Hejaz and the Sharifate of Mecca. While these two bodies continued to clash with each other, Sharif in Mecca enjoyed a large degree of autonomous rule. In order to centralize our state and bring Hejaz into the fold, we have to abolish this parallel entity."
  TUR_increase_hejaz_centralization_20:0 "Modify §YCentralization§! of §YHejaz Vilayet§! by §G+20%§!\n"
@@ -5905,6 +5909,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
+ TRS_integrating_mount_lebanon:0 "Integrating Mount Lebanon"
+ TRS_integrating_mount_lebanon_desc:0 "Though our army has entered Mount Lebanon and the era of "foreign" Mutasarrifs are over, total integration of Mount Lebanon as an Ottoman province will take time."
  TRS_appoint_ismail_hakki:0 "Appoint İsmail Hakkı Bey"
  TRS_appoint_ismail_hakki_desc:0 "As the situation in the Mutasarrifate of Mount Lebanon getting worse and worse, and the local people getting further disconcent, perhaps it'd be better to appoint a more tolerant and popular governor. İsmail Hakkı Bey, a religious and charitable man, seems just to be the one for the job."
  TRS_subjugate_the_maronite_patriarch:0 "Subjugate the Maronite Patriarch"
