--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5064,7 +5064,7 @@ complete_bbore:0 "Completing the focus '§YNew Agricultural Techniques§!' will 
  ww1_romania.28.b:0 "The liberation of Moldova awaits!"
 ww1_romania.79.t:0 "National Opposition Organizes"
 ww1_romania.79.d:0 "Do later"
-ww1_romania.79.a:0 "TND nigger death"
+ww1_romania.79.a:0 " "
 ROM_national_opposition_idea:0 "National Opposition"
  ww1_romania.80.t:0 "The Carp Constitution"
 
@@ -5073,16 +5073,16 @@ ROM_the_carp_constitution_desc:0 "With all enemies of Carp neutralized, we can f
 ROM_all_factions_crushed:0 "There are no politically relevant forces in Romania to oppose this drastic action"
 ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with seperation of powers, an abolished death penalty, guaranteed private property, freedom of speech, and total freedom of the press. However, the Romanian constitution has had very little change since then, and thus Romania has fallen from one of the most democratic countries at its time, to the flawed constitutional monarchy it is now.\n\nWhether this is a positive or negative development for Romania is debatable, but one thing can be agreed upon by everyone: King Carol's influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or at least supporting the conservatives in the elections."
 ww1_romania.1.a:0 "The king is a very wise man"
-kis_news.144.t:0 "Petre Carp Forms Government in Romania"
-kis_news.144.d:0 "With the results of Romanias recent elections in, Petre Carps conservative party has captured a majority in parliament. Thus, King Carol has given them the task of forming a government. Notably, Petre Carp has long been a Germophile and has written several works calling for the 'liberation' of Moldova from the Russian Empire. With this, many are expecting Romania to draw closer to Germany. Even more concerningly for the entente, Carp has shown authoritarian tendencies in the past and in his current rhetoric, and thus it's unknown if Carp would be willing to give up power."
-kis_news.144.a:0 "Is he a threat to Romanian democracy?"
-kis_news.144.b:0 "Lets hope his government falls!"
-kis_news.144.c:0 "We wish him well!"
-kis_news.145.t:0 "PNL Government in Romania"
-kis_news.145.d:0 "Today the King tasked the liberal PNL party of Romania to form a new government. Notably, many in the PNL are outspoken francophiles, and thus many expect this new government may draw closer to the Entente. This would prove a big blow to the Central Powers, which has heavily influenced Romania in the past. Already, the new government has began outreach to France, and suprisingly, Russia, to strengthen ties. Although nothing is guaranteed, this seems to be a big blow to Germany."
-kis_news.145.a:0 "It would certainly shake things up"
-kis_news.145.b:0 "Great!"
-kis_news.145.c:0 "Nothing is guarenteed!"
+ww1_romania.88.t:0 "Petre Carp Forms Government in Romania"
+ww1_romania.88.d:0 "With the results of Romanias recent elections in, Petre Carps conservative party has captured a majority in parliament. Thus, King Carol has given them the task of forming a government. Notably, Petre Carp has long been a Germophile and has written several works calling for the 'liberation' of Moldova from the Russian Empire. With this, many are expecting Romania to draw closer to Germany. Even more concerningly for the entente, Carp has shown authoritarian tendencies in the past and in his current rhetoric, and thus it's unknown if Carp would be willing to give up power."
+ww1_romania.88.a:0 "Is he a threat to Romanian democracy?"
+ww1_romania.88.b:0 "Lets hope his government falls!"
+ww1_romania.88.c:0 "We wish him well!"
+ww1_romania.89.t:0 "PNL Government in Romania"
+ww1_romania.89.d:0 "Today the King tasked the liberal PNL party of Romania to form a new government. Notably, many in the PNL are outspoken francophiles, and thus many expect this new government may draw closer to the Entente. This would prove a big blow to the Central Powers, which has heavily influenced Romania in the past. Already, the new government has began outreach to France, and suprisingly, Russia, to strengthen ties. Although nothing is guaranteed, this seems to be a big blow to Germany."
+ww1_romania.89.a:0 "It would certainly shake things up"
+ww1_romania.89.b:0 "Great!"
+ww1_romania.89.c:0 "Nothing is guarenteed!"
 ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
 ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
 ww1_romania.5.a:0 "What a disaster!"
