--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10267,20 +10267,20 @@ lack_of_passion:0 "Lack of Passion"
  kis_news.142.d: "The 8th Congress of the International was held in Copenhagen, to dicuss the agenda; the stance of socialists regarding the imminent war. The resolution on the struggle against war - "Arbitration Courts and Disarmament" - confirmed the resolution of the Stuttgart Congress of 1907 on "Militarism and International Conflicts", which included the amendments motioned by Lenin and Rosa Luxemburg. These amendments called on the socialists of all countries to use the economic and political crisis caused by war to overthrow the bourgeoisie. The resolution of the Copenhagen Congress also bound the socialist parties and their representatives in parliaments to demand that their governments reduce armaments and settle conflicts between states through arbitration courts. It urged the workers of all countries to stage protests against the threat of war."
  kis_news.142.a: "Do they really think that the war is avoidable?"
 
-kis_news.146.t:0 "[AUH.GetName] cedes Bukovina to the [ROM.GetAdjective]s"
-kis_news.146.desc:0 "[ROM.GetName] cedes Bukovina and North Bukovina to the [ROM.GetAdjective]s, and in return, [ROM.GetName] has to join the Central Powers. This seems like a one-sided deal, as [ROM.GetName] get all the benefits."
-kis_news.146.a:0 "How will the people in Bukovina react?"
-kis_news.146.b:0 "The [ROM.GetAdjective] Rat strikes again..."
-kis_news.146.c:0 "Hello to our new ally!"
-kis_news.146.d:0 "Was this worth it?"
-kis_news.146.e:0 "Hopefully we survive in here."
+ww1_romania.90.t:0 "[AUH.GetName] cedes Bukovina to the [ROM.GetAdjective]s"
+ww1_romania.90.desc:0 "[ROM.GetName] cedes Bukovina and North Bukovina to the [ROM.GetAdjective]s, and in return, [ROM.GetName] has to join the Central Powers. This seems like a one-sided deal, as [ROM.GetName] get all the benefits."
+ww1_romania.90.a:0 "How will the people in Bukovina react?"
+ww1_romania.90.b:0 "The [ROM.GetAdjective] Rat strikes again..."
+ww1_romania.90.c:0 "Hello to our new ally!"
+ww1_romania.90.d:0 "Was this worth it?"
+ww1_romania.90.e:0 "Hopefully we survive in here."
 
-kis_news.147.t:0 "[ROM.GetName] signs an armistice!"
-kis_news.147.desc:0 "[ROM.GetName]'s government has come out with a statement saying that it can no longer fight in the Great War, and that they're backing out. They've signed a white peace with [AUH.GetName], [GER.GetName] and [BUL.GetName] in exchange of territory."
-kis_news.147.a:0 "Dark times."
-kis_news.147.b:0 "At least we survived."
-kis_news.147.c:0 "One less front to deal with."
-kis_news.147.d:0 "Pussies!"
+ww1_romania.91.t:0 "[ROM.GetName] signs an armistice!"
+ww1_romania.91.desc:0 "[ROM.GetName]'s government has come out with a statement saying that it can no longer fight in the Great War, and that they're backing out. They've signed a white peace with [AUH.GetName], [GER.GetName] and [BUL.GetName] in exchange of territory."
+ww1_romania.91.a:0 "Dark times."
+ww1_romania.91.b:0 "At least we survived."
+ww1_romania.91.c:0 "One less front to deal with."
+ww1_romania.91.d:0 "Damn it!"
 
  # Alternative History
  ww1_alternativehistory.1.t: "Instability and Uncertain Future in the Balkans"
